# quint

./: CMakeLists.txt  README.md
cmake/: PythonNumpyPybind11.cmake  QuintCXXFlags.cmake  QuintCore.cmake  config.h.in  config.py.in
cmake/modules/: AddQuint.cmake
example/: grover.qpl  grover.quint
frontend/: CMakeLists.txt  frontendgen.cpp  quint.cpp
frontend/include/ast/: error.h  expr.h  scope.h  stmt.h  type.h
frontend/include/compiler/: compiler.h  error.h
frontend/include/dsl/: dsl.h  plugins.h
frontend/include/parser/: keyword_map.h  lexer.h  parser.h  parser_common.h
frontend/include/parser/grammar/: Tokens  quint.gram
frontend/include/simulate/: hashtable.h  qsim.h
frontend/include/structure/: base.h  package.h
frontend/include/util/: cast.h  front_logger.h
frontend/lib/ast/: expr.cpp  scope.cpp  stmt.cpp
frontend/lib/compiler/: compiler.cpp  error.cpp
frontend/lib/dsl/: plugins.cpp
frontend/lib/parser/: parser.cpp  parser_common.cpp
frontend/lib/simulate/: hashtable.cpp  qsim.cpp
frontend/lib/util/: front_logger.cpp
include/analysis/: analysis.h  offline_cache_util.h
include/codegen/: codegen.h
include/common/: core.h  dict.h  err_handler.h  exceptions.h  interface.h  json.h  json_serde.h  logger.h  platform_macros.h  serialization.h  zip.h
include/inc/: constant.h  expressions.inc.h
include/ir/: expr.h  expression.h  expression_ops.h  frontend_ir.h  ir.h  mesh.h  offloaded_task_type.h  snode.h  statements.h  stmt_op_types.h  transforms.h  type.h  type_factory.h  type_utils.h  visitors.h
include/jit/: jit_module.h  jit_session.h
include/program/: callable.h  compile_config.h  context.h  kernel.h  kernel_profiler.h  parallel_executor.h  program.h  program_impl.h
include/rhi/: device.h
include/system/: profiler.h  timeline.h  timer.h
include/util/: basic.h  file_sequence_writer.h  hash.h  io.h  lang_util.h  misc.h  offline_cache.h  random_engine.h  util.h
mlir/: CMakeLists.txt  quint_mlir_api.cpp  quint_mlir_api.h
mlir/include/: CMakeLists.txt
mlir/include/codegen/: gen_module.h
mlir/include/dialect/: CMakeLists.txt
mlir/include/dialect/quint/: CMakeLists.txt  QuintDialect.h  QuintDialect.td  QuintOps.h  QuintOps.td
mlir/lib/: CMakeLists.txt
mlir/lib/codegen/: CMakeLists.txt  gen_module.cpp
mlir/lib/dialect/quint/: CMakeLists.txt  QuintDialect.cpp  QuintOps.cpp
python/: .gitignore  MANIFEST.in  requirements.txt
quint/analysis/: analysis.h  build_cfg.cpp  check_fields_registered.cpp  clone.cpp  detect_fors_with_break.cpp  gather_deactivations.cpp  gather_immutable_local_vars.cpp  gather_snode_read_writes.cpp  gather_statement_usages.cpp  gather_statements.cpp  gen_offline_cache_key.cpp  offline_cache_util.cpp  offline_cache_util.h  verify.cpp
quint/codegen/: codegen.cpp  codegen.h
quint/codegen/cpu/: CMakeLists.txt  codegen_cpu.cpp  codegen_cpu.h
quint/codegen/llvm/: CMakeLists.txt  codegen_llvm.cpp  codegen_llvm.h  llvm_codege_utils.cpp  llvm_codegen_utils.h  llvm_compiled_data.cpp  llvm_compiled_data.h
quint/common/: CMakeLists.txt  core.cpp  core.h  dict.h  err_handler.h  interface.h  json.cpp  json_serde.h  logger.cpp  logger.h  miniz.cpp  miniz.h  serialization.h  trait.h  typedefs.h  zip.cpp
quint/inc/: constant.h  cuda_kernel_utils.inc.h
quint/ir/: basic_stmt_visitor.cpp  control_flow_graph.cpp  control_flow_graph.h  expr.cpp  expr.h  expression.cpp  expression.h  expression_ops.cpp  expression_printer.h  frontend_ir.cpp  frontend_ir.h  ir.cpp  ir.h  mesh.cpp  mesh.h  offloaded_task_type.cpp  offloaded_task_type.h  pass.cpp  pass.h  replace_statements.cpp  scratch_pad.cpp  scratch_pad.h  snode.cpp  snode.h  snode_types.cpp  snode_types.h  statements.cpp  statements.h  stmt_op_types.cpp  stmt_op_types.h  transforms.h  type.cpp  type.h  type_factory.cpp  type_factory.h  type_utils.cpp  type_utils.h  visitors.h
quint/jit/: jit_session.cpp  jit_session.h
quint/math/: arithmetic.h
quint/program/: callable.cpp  callable.h  compile_config.cpp  compile_config.h  context.h  function.cpp  function.h  function_key.cpp  function_key.h  kernel.cpp  kernel.h  kernel_profiler.cpp  kernel_profiler.h  parallel_executor.cpp  parallel_executor.h  program.cpp  program.h  program_impl.cpp  program_impl.h  py_print_buffer.cpp  py_print_buffer.h  snode_expr_utils.cpp  snode_expr_utils.h  snode_rw_accessors_bank.cpp  snode_rw_accessors_bank.h
quint/python/: exception.cpp  exception.h  export.cpp  export.h  export_lang.cpp  export_misc.cpp
quint/rhi/: device.cpp  device.h
quint/runtime/llvm/runtime_module/: CMakeLists.txt  atomic.h  internal_functions.h  locked_task.h  mem_request.h  node_bitmasked.h  node_dense.h  node_dynamic.h  node_pointer.h  node_root.h  runtime.cpp
quint/struct/: snode_tree.cpp  snode_tree.h
quint/system/: profiler.cpp  profiler.h  timeline.cpp  timeline.h  timer.cpp  timer.h
quint/transforms/: alg_simp.cpp  binary_op_simplify.cpp  bit_loop_vectorize.cpp  cache_loop_invariant_global_vars.cpp  cfg_optimization.cpp  check_out_of_bound.cpp  check_out_of_bound.h  compile_to_offloads.cpp  constant_fold.cpp  constant_fold.h  demote_atomics.cpp  demote_dense_struct_fors.cpp  demote_operations.cpp  detect_read_only.cpp  determikne_ad_stack_size.cpp  die.cpp  eliminate_immutable_local_vars.cpp  extract_constant.cpp  flag_access.cpp  frontend_type_check.cpp  ir_printer.cpp  loop_invariant_code_motion.cpp  loop_invariant_detector.h  lower_access.cpp  lower_access.h  lower_ast.cpp  make_block_local.cpp  (+19 more)
src/: CMakeLists.txt  version.inc.in
src/codegen/cpu/: CMakeLists.txt  codegen_cpu.cpp
src/runtime/cpu/: CMakeLists.txt  jit_cpu.cpp
src/runtime/llvm/: CMakeLists.txt  launch_arg_info.cpp  llvm_context.cpp  llvm_offline_cache.cpp  llvm_runtime_executor.cpp
src/util/: CMakeLists.txt  basic.cpp  file_sequence_writer.cpp  lang_util.cpp  misc.cpp  offline_cache.cpp
test/: CMakeLists.txt  LLVMTest.cpp  LowerTest.cpp  MLIRTest.cpp  UnComputeTest.cpp
test/frontend/: CMakeLists.txt  FrontedLoggerTest.cpp  LexerTest.cpp
test/python/: compile_test.py
tpl/: CMakeLists.txt
(+157 files in other folders)
