add_executable(UnComputeTest UnComputeTest.cpp)
target_include_directories(UnComputeTest PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(UnComputeTest PRIVATE ${PROJECT_SOURCE_DIR}/tpl/eigen)
target_include_directories(UnComputeTest PRIVATE ${PROJECT_SOURCE_DIR}/tpl/argparse)
target_include_directories(UnComputeTest PRIVATE ${PROJECT_SOURCE_DIR}/tpl/spdlog/include)
target_link_libraries(UnComputeTest quint_core)


#add_executable(MLIRTest MLIRTest.cpp)
#target_include_directories(MLIRTest PRIVATE ${PROJECT_SOURCE_DIR}/include)
#target_include_directories(MLIRTest PRIVATE ${PROJECT_SOURCE_DIR}/tpl/eigen)
#target_include_directories(MLIRTest PRIVATE ${PROJECT_SOURCE_DIR}/tpl/argparse)
#target_include_directories(MLIRTest PRIVATE ${PROJECT_SOURCE_DIR}/tpl/spdlog/include)
#target_include_directories(MLIRTest PRIVATE "${LLVM_BINARY_DIR}/include" "${LLVM_INCLUDE_DIR}")
#target_include_directories(MLIRTest PRIVATE ${MLIR_INCLUDE_DIRS})
#target_include_directories(MLIRTest PRIVATE ${PROJECT_BINARY_DIR}/include)
#target_link_libraries(MLIRTest quint_core)
#target_link_libraries(MLIRTest quint-mlir-api)


add_executable(LLVMTest LLVMTest.cpp)
target_include_directories(LLVMTest PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(LLVMTest PRIVATE ${PROJECT_SOURCE_DIR}/tpl/eigen)
target_include_directories(LLVMTest PRIVATE ${PROJECT_SOURCE_DIR}/tpl/argparse)
target_include_directories(LLVMTest PRIVATE ${PROJECT_SOURCE_DIR}/tpl/spdlog/include)
target_include_directories(LLVMTest PRIVATE "${LLVM_BINARY_DIR}/include" "${LLVM_INCLUDE_DIR}")
target_link_libraries(LLVMTest quint_core)


#add_executable(LowerTest LowerTest.cpp)
#target_include_directories(LowerTest PRIVATE ${PROJECT_SOURCE_DIR}/include)
#target_include_directories(LowerTest PRIVATE ${PROJECT_SOURCE_DIR}/tpl/eigen)
#target_include_directories(LowerTest PRIVATE ${PROJECT_SOURCE_DIR}/tpl/argparse)
#target_include_directories(LowerTest PRIVATE ${PROJECT_SOURCE_DIR}/tpl/spdlog/include)
#target_include_directories(LowerTest PRIVATE "${LLVM_BINARY_DIR}/include" "${LLVM_INCLUDE_DIR}")
#target_include_directories(LowerTest PRIVATE ${MLIR_INCLUDE_DIRS})
#target_include_directories(LowerTest PRIVATE ${PROJECT_BINARY_DIR}/include)
#target_link_libraries(LowerTest quint_core)